SM-Dev/src/objects/Potential_Order__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Potential Orders</relationshipLabel>
        <relationshipName>Potential_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Brick Red</fullName>
                </value>
                <value>
                    <fullName>Camo</fullName>
                </value>
                <value>
                    <fullName>Charcoal</fullName>
                </value>
                <value>
                    <fullName>Coral</fullName>
                </value>
                <value>
                    <fullName>High Country</fullName>
                </value>
                <value>
                    <fullName>Ice Blue</fullName>
                </value>
                <value>
                    <fullName>Olive Green</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Seafoam</fullName>
                </value>
                <value>
                    <fullName>Sky Blue</fullName>
                </value>
                <value>
                    <fullName>Stainless</fullName>
                </value>
                <value>
                    <fullName>Tahoe Blue</fullName>
                </value>
                <value>
                    <fullName>Tahoe Blue/ Fog Gray</fullName>
                </value>
                <value>
                    <fullName>Tan</fullName>
                </value>
                <value>
                    <fullName>Tan/Blaze Orange</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Request_Date__c</fullName>
        <label>Order Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Bags</fullName>
                </value>
                <value>
                    <fullName>Chairs</fullName>
                </value>
                <value>
                    <fullName>Drinkware</fullName>
                </value>
                <value>
                    <fullName>Gear</fullName>
                </value>
                <value>
                    <fullName>Hopper</fullName>
                </value>
                <value>
                    <fullName>Ice</fullName>
                </value>
                <value>
                    <fullName>Loadout</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
                <value>
                    <fullName>Roadie</fullName>
                </value>
                <value>
                    <fullName>Tank</fullName>
                </value>
                <value>
                    <fullName>Tundra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1/2 G</fullName>
                </value>
                <value>
                    <fullName>1 G</fullName>
                </value>
                <value>
                    <fullName>1 Gallon Jug</fullName>
                </value>
                <value>
                    <fullName>1 Pound</fullName>
                </value>
                <value>
                    <fullName>2 Pound</fullName>
                </value>
                <value>
                    <fullName>4 Pound</fullName>
                </value>
                <value>
                    <fullName>Backflip 24</fullName>
                </value>
                <value>
                    <fullName>Baskets</fullName>
                </value>
                <value>
                    <fullName>Bottle Lid</fullName>
                </value>
                <value>
                    <fullName>Bottle Opener</fullName>
                </value>
                <value>
                    <fullName>Can Insulators</fullName>
                </value>
                <value>
                    <fullName>Collegiate Cooler</fullName>
                </value>
                <value>
                    <fullName>Colster</fullName>
                </value>
                <value>
                    <fullName>Cushions</fullName>
                </value>
                <value>
                    <fullName>Decals</fullName>
                </value>
                <value>
                    <fullName>Flip</fullName>
                </value>
                <value>
                    <fullName>Flip 12</fullName>
                </value>
                <value>
                    <fullName>Flip 18</fullName>
                </value>
                <value>
                    <fullName>Flip 8</fullName>
                </value>
                <value>
                    <fullName>Half Gallon Jug</fullName>
                </value>
                <value>
                    <fullName>Hats</fullName>
                </value>
                <value>
                    <fullName>Hondo</fullName>
                </value>
                <value>
                    <fullName>Hopper 20</fullName>
                </value>
                <value>
                    <fullName>Hopper 30</fullName>
                </value>
                <value>
                    <fullName>Hopper 40</fullName>
                </value>
                <value>
                    <fullName>Hopper Two 20</fullName>
                </value>
                <value>
                    <fullName>Hopper Two 30</fullName>
                </value>
                <value>
                    <fullName>Hopper Two 40</fullName>
                </value>
                <value>
                    <fullName>Lid 10/20</fullName>
                </value>
                <value>
                    <fullName>Lid 30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Potential Order</label>
    <nameField>
        <displayFormat>PP-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potential Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>